fixed email overflow issue in dashboard

--- a/src/EES/Dashboard/DashBoard.css
+++ b/src/EES/Dashboard/DashBoard.css
@@ -45,6 +45,9 @@
   margin-top: 1.2rem;
   height: 50%;
 }
+.userEmail{
+  overflow: scroll;
+}
 .padding-between {
   padding: 2%;
 }
